--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
@@ -10,7 +10,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(SRC_HOME)/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-sama5d3_xplained_lan937x"
+BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/atmel/sama5d3_xplained_ksz9897/busybox.config"
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
@@ -30,8 +30,8 @@ BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_NUTTCP=y
 BR2_PACKAGE_TCPDUMP=y
-BR2_PACKAGE_KSZ_PTP_CLI=y
-BR2_PACKAGE_KSZ_OPENAVB=y
+#BR2_PACKAGE_KSZ_PTP_CLI=y
+#BR2_PACKAGE_KSZ_OPENAVB=y
 # BR2_PACKAGE_PE_DIAG is not set
 BR2_TARGET_ROOTFS_UBIFS=y
 BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x1f000
