--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts
@@ -14,7 +14,7 @@
 	compatible = "atmel,sama5d3-xplained", "atmel,sama5d3", "atmel,sama5";
 
 	chosen {
-		bootargs = "console=ttyS0,115200";
+		stdout-path = "serial0:115200n8";
 	};
 
 	memory {
@@ -51,14 +51,57 @@
 				lan937x: lan937x@0 {
 					compatible = "microchip,lan937x";
 					reg = <0>;
-
-					/* Bus clock is 132 MHz. */
-					spi-max-frequency = <44000000>;
+					/*44 MHz did not work*/
+					spi-max-frequency = <6000000>;
 					spi-cpha;
 					spi-cpol;
 					interrupt-parent = <&pioB>;
-					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;
-					status = "okay";
+					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					status = "okay";
+					ports {
+						#address-cells = <1>;
+						#size-cells = <0>;
+						port@0 {
+							reg = <0>;
+							label = "lan1";
+						};
+						port@1 {
+							reg = <1>;
+							label = "lan2";
+						};
+						port@2 {
+							reg = <2>;
+							label = "lan3";
+						};
+						port@3 {
+							reg = <3>;
+							label = "lan4";
+						};
+						port@4 {
+							reg = <4>;
+							label = "lan5";
+						};
+						port@5 {
+							reg = <5>;
+							label = "lan6";
+						};
+						port@6 {
+							reg = <6>;
+							label = "cpu";
+							ethernet = <&macb0>;
+							fixed-link {
+								speed = <1000>;
+								full-duplex;
+							};
+						};
+						port@7 {
+							reg = <7>;
+							label = "lan7";
+							fixed-link {
+								speed = <1000>;
+								full-duplex;
+							};
+						};
+					};
 				};
 			};
 
@@ -119,9 +162,9 @@
 
 			macb0: ethernet@f0028000 {
 				phy-mode = "rgmii-id";
-				status = "okay";
 				#address-cells = <1>;
 				#size-cells = <0>;
+				status = "okay";
 
 				fixed-link {
 					speed = <1000>;
@@ -212,6 +255,11 @@
 						atmel,pins =
 							<AT91_PIOA 18 AT91_PERIPH_B AT91_PINCTRL_PULL_UP>,
 							<AT91_PIOA 19 AT91_PERIPH_B AT91_PINCTRL_PULL_UP>;
+					};
+
+					pinctrl_key_gpio: key_gpio_0 {
+						atmel,pins =
+							<AT91_PIOE 29 AT91_PERIPH_GPIO AT91_PINCTRL_PULL_UP_DEGLITCH>;
 					};
 
 					pinctrl_mmc0_cd: mmc0_cd {
@@ -334,11 +382,13 @@
 	gpio_keys {
 		compatible = "gpio-keys";
 
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_key_gpio>;
 		bp3 {
 			label = "PB_USER";
 			gpios = <&pioE 29 GPIO_ACTIVE_LOW>;
 			linux,code = <0x104>;
-			gpio-key,wakeup;
+			wakeup-source;
 		};
 	};
 
