basically all ports are up

--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts
@@ -70,7 +70,8 @@
 					spi-cpha;
 					spi-cpol;
 					interrupt-parent = <&pioB>;
-					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					status = "okay";
+					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
+					status = "okay";
 					ports {
 						#address-cells = <1>;
 						#size-cells = <0>;
