--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts
@@ -62,7 +62,64 @@
 				id = <0>;
 				status = "okay";
 
-				lan937x: lan937x@0 {
+				lan9374: lan9374@0 {
+					compatible = "microchip,lan937x";
+					reg = <0>;
+					/*44 MHz did not work*/
+					spi-max-frequency = <6000000>;
+					spi-cpha;
+					spi-cpol;
+					interrupt-parent = <&pioB>;
+					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
+					status = "disabled";
+					ports {
+						#address-cells = <1>;
+						#size-cells = <0>;
+						port@0 {
+							reg = <0>;
+							label = "lan1";
+						};
+						port@1 {
+							reg = <1>;
+							label = "lan2";
+						};
+						port@2 {
+							reg = <2>;
+							label = "lan3";
+						};
+						port@3 {
+							reg = <3>;
+							label = "lan4";
+						};
+						port@4 {
+							reg = <4>;
+							label = "lan5";
+						};
+						port@5 {
+							reg = <5>;
+							label = "lan6";
+						};
+						port@6 {
+							reg = <6>;
+							label = "cpu";
+							ethernet = <&macb0>;
+							fixed-link {
+								speed = <1000>;
+								full-duplex;
+							};
+						};
+						port@7 {
+							reg = <7>;
+							label = "lan7";
+							fixed-link {
+								speed = <1000>;
+								full-duplex;
+							};
+						};
+					};
+				};
+				
+				lan9372: lan9372@0 {
 					compatible = "microchip,lan937x";
 					reg = <0>;
 					/*44 MHz did not work*/
