--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
@@ -30,6 +30,7 @@ BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_NUTTCP=y
 BR2_PACKAGE_TCPDUMP=y
+BR2_PACKAGE_IPROUTE2=y
 #BR2_PACKAGE_KSZ_PTP_CLI=y
 #BR2_PACKAGE_KSZ_OPENAVB=y
 # BR2_PACKAGE_PE_DIAG is not set
