--- a/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
+++ b/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
@@ -43,6 +43,7 @@ CONFIG_IP_PNP_RARP=y
 # CONFIG_INET_DIAG is not set
 CONFIG_IPV6_SIT_6RD=y
 CONFIG_BRIDGE=y
+CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_NET_DSA=y
 CONFIG_VLAN_8021Q=y
 CONFIG_CAN=y
