enable debug fs for command line spi read/write

--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
@@ -31,9 +31,16 @@ BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_NUTTCP=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_IPROUTE2=y
-#BR2_PACKAGE_KSZ_PTP_CLI=y
-#BR2_PACKAGE_KSZ_OPENAVB=y
+# BR2_PACKAGE_KSZ_LINUXPTP is not set
+# BR2_PACKAGE_KSZ_PTP_SCRIPTS is not set
+# BR2_PACKAGE_KSZ_REGS_BIN is not set
+# BR2_PACKAGE_KSZ_PTP_CLI is not set
+# BR2_PACKAGE_KSZ_PTP_TEST is not set
+# BR2_PACKAGE_KSZ_OPENAVB is not set
+# BR2_PACKAGE_MDIO_TOOL is not set
+# BR2_PACKAGE_WEB_GUI is not set
 # BR2_PACKAGE_PE_DIAG is not set
+# BR2_PACKAGE_KSZ_REGS_BIN is not set
 BR2_TARGET_ROOTFS_UBIFS=y
 BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x1f000
 BR2_TARGET_ROOTFS_UBI=y
