--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x_svb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x_svb.dts
@@ -61,6 +61,122 @@
 				cs-gpios = <&pioD 13 0>, <0>, <0>, <&pioD 16 0>;
 				id = <0>;
 				status = "okay";
+
+				lan9374: lan9374@0 {
+					compatible = "microchip,lan937x";
+					reg = <0>;
+					phy-mode = "rmii";
+					/*44 MHz did not work*/
+					spi-max-frequency = <6000000>;
+					spi-cpha;
+					spi-cpol;
+					interrupt-parent = <&pioB>;
+					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
+					status = "disabled";
+					ports {
+						#address-cells = <1>;
+						#size-cells = <0>;
+						port@0 {
+							reg = <0>;
+							label = "lan1";
+						};
+						port@1 {
+							reg = <1>;
+							label = "lan2";
+						};
+						port@2 {
+							reg = <2>;
+							label = "lan3";
+						};
+						port@3 {
+							reg = <3>;
+							label = "lan4";
+						};
+						port@4 {
+							reg = <4>;
+							label = "lan5";
+						};
+						port@5 {
+							reg = <5>;
+							label = "lan6";
+						};
+						port@6 {
+							reg = <6>;
+							label = "cpu";
+							ethernet = <&macb0>;
+							fixed-link {
+								speed = <100>;
+								full-duplex;
+							};
+						};
+						port@7 {
+							reg = <7>;
+							label = "lan7";
+							fixed-link {
+								speed = <100>;
+								full-duplex;
+							};
+						};
+					};
+				};
+				
+				lan9372: lan9372@0 {
+					compatible = "microchip,lan937x";
+					reg = <0>;
+					phy-mode = "rmii";
+					/*44 MHz did not work*/
+					spi-max-frequency = <6000000>;
+					spi-cpha;
+					spi-cpol;
+					interrupt-parent = <&pioB>;
+					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
+					status = "okay";
+					ports {
+						#address-cells = <1>;
+						#size-cells = <0>;
+						port@0 {
+							reg = <0>;
+							label = "lan1";
+						};
+						port@1 {
+							reg = <1>;
+							label = "lan2";
+						};
+						port@2 {
+							reg = <2>;
+							label = "lan3";
+						};
+						port@3 {
+							reg = <3>;
+							label = "lan4";
+						};
+						port@4 {
+							reg = <4>;
+							label = "lan5";
+						};
+						port@5 {
+							reg = <5>;
+							label = "lan6";
+						};
+						port@6 {
+							reg = <6>;
+							label = "cpu";
+							ethernet = <&macb0>;
+							fixed-link {
+								speed = <100>;
+								full-duplex;
+							};
+						};
+						port@7 {
+							reg = <7>;
+							label = "lan7";
+							fixed-link {
+								speed = <100>;
+								full-duplex;
+							};
+						};
+					};
+				};
 			};
 
 			can0: can@f000c000 {
@@ -122,7 +238,7 @@
 				phy-mode = "rmii";
 				#address-cells = <1>;
 				#size-cells = <0>;
-				status = "disabled";
+				status = "okay";
 
 				fixed-link {
 					speed = <100>;
@@ -160,166 +276,9 @@
 			};
 
 			spi1: spi@f8008000 {
-				cs-gpios = <0>, <0>, <0>, <&pioC 28 0>;
+				cs-gpios = <&pioC 25 0>;
 				id = <1>;
 				status = "okay";
-				
-				lan9374: lan9374@3 {
-					compatible = "microchip,lan937x";
-					reg = <3>;
-					phy-mode = "rmii";
-					/*44 MHz did not work*/
-					spi-max-frequency = <6000000>;
-					spi-cpha;
-					spi-cpol;
-					interrupt-parent = <&pioB>;
-					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
-					status = "disabled";
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <2>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <3>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <4>;
-							label = "lan5";
-						};
-						port@5 {
-							reg = <5>;
-							label = "lan6";
-						};
-						port@6 {
-							reg = <6>;
-							label = "cpu";
-							ethernet = <&macb0>;
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-						port@7 {
-							reg = <7>;
-							label = "lan7";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
-				
-				lan9372: lan9372@3 {
-					compatible = "microchip,lan937x";
-					reg = <3>;
-					phy-mode = "rmii";
-					/*44 MHz did not work*/
-					spi-max-frequency = <1000000>;
-					spi-cpha;
-					spi-cpol;
-					interrupt-parent = <&pioB>;
-					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
-					status = "disabled";
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <2>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <3>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <4>;
-							label = "lan5";
-						};
-						port@5 {
-							reg = <5>;
-							label = "lan6";
-						};
-						port@6 {
-							reg = <6>;
-							label = "cpu";
-							ethernet = <&macb0>;
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-						port@7 {
-							reg = <7>;
-							label = "lan7";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
-				
-				lan9370: lan9370@3 {
-					compatible = "microchip,lan937x";
-					reg = <3>;
-					phy-mode = "rmii";
-					spi-max-frequency = <44000000>;
-					spi-cpha;
-					spi-cpol;
-					interrupt-parent = <&pioB>;
-					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
-					status = "okay";
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <2>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <3>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <4>;
-							label = "cpu";
-							ethernet = <&macb1>;
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
 			};
 
 			adc0: adc@f8018000 {
@@ -347,10 +306,7 @@
 
 			macb1: ethernet@f802c000 {
 				phy-mode = "rmii";
-				#address-cells = <1>;
-				#size-cells = <0>;
-				
-				status = "okay";
+				status = "disabled";
 				fixed-link {
 					speed = <100>;
 					full-duplex;
