--- a/src/kernels/masternet-next/Kconfig
+++ b/src/kernels/masternet-next/Kconfig
@@ -1,56 +1,32 @@
-# SPDX-License-Identifier: GPL-2.0-only
-config NET_DSA_MICROCHIP_KSZ_COMMON
-	select NET_DSA_TAG_KSZ
-	tristate
+# SPDX-License-Identifier: GPL-2.0
+#
+# For a description of the syntax of this configuration file,
+# see Documentation/kbuild/kconfig-language.rst.
+#
+mainmenu "Linux/$(ARCH) $(KERNELVERSION) Kernel Configuration"
 
-menuconfig NET_DSA_MICROCHIP_LAN937X
-	tristate "Microchip LAN937X series switch support"
-	depends on NET_DSA
-	select NET_DSA_MICROCHIP_KSZ_COMMON
-	help
-	  This driver adds support for Microchip LAN937X switch chips.
+source "scripts/Kconfig.include"
 
-config NET_DSA_MICROCHIP_LAN937X_SPI
-	tristate "LAN937X series SPI connected switch driver"
-	depends on NET_DSA_MICROCHIP_LAN937X && SPI
-	select REGMAP_SPI
-	help
-	  Select to enable support for registering switches configured through SPI.
+source "init/Kconfig"
 
-menuconfig NET_DSA_MICROCHIP_KSZ9477
-	tristate "Microchip KSZ9477 series switch support"
-	depends on NET_DSA
-	select NET_DSA_MICROCHIP_KSZ_COMMON
-	help
-	  This driver adds support for Microchip KSZ9477 switch chips.
+source "kernel/Kconfig.freezer"
 
-config NET_DSA_MICROCHIP_KSZ9477_I2C
-	tristate "KSZ9477 series I2C connected switch driver"
-	depends on NET_DSA_MICROCHIP_KSZ9477 && I2C
-	select REGMAP_I2C
-	help
-	  Select to enable support for registering switches configured through I2C.
+source "fs/Kconfig.binfmt"
 
-config NET_DSA_MICROCHIP_KSZ9477_SPI
-	tristate "KSZ9477 series SPI connected switch driver"
-	depends on NET_DSA_MICROCHIP_KSZ9477 && SPI
-	select REGMAP_SPI
-	help
-	  Select to enable support for registering switches configured through SPI.
+source "mm/Kconfig"
 
-menuconfig NET_DSA_MICROCHIP_KSZ8795
-	tristate "Microchip KSZ8795 series switch support"
-	depends on NET_DSA
-	select NET_DSA_MICROCHIP_KSZ_COMMON
-	help
-	  This driver adds support for Microchip KSZ8795 switch chips.
+source "net/Kconfig"
 
-config NET_DSA_MICROCHIP_KSZ8795_SPI
-	tristate "KSZ8795 series SPI connected switch driver"
-	depends on NET_DSA_MICROCHIP_KSZ8795 && SPI
-	select REGMAP_SPI
-	help
-	  This driver accesses KSZ8795 chip through SPI.
+source "drivers/Kconfig"
 
-	  It is required to use the KSZ8795 switch driver as the only access
-	  is through SPI.
+source "fs/Kconfig"
+
+source "security/Kconfig"
+
+source "crypto/Kconfig"
+
+source "lib/Kconfig"
+
+source "lib/Kconfig.debug"
+
+source "Documentation/Kconfig"
