--- a/src/kernels/masternet-next/Documentation/devicetree/bindings/net/dsa/microchip,lan937x.yaml
+++ b/src/kernels/masternet-next/Documentation/devicetree/bindings/net/dsa/microchip,lan937x.yaml
@@ -1,12 +1,13 @@
 # SPDX-License-Identifier: (GPL-2.0-only OR BSD-2-Clause)
 %YAML 1.2
 ---
-$id: http://devicetree.org/schemas/net/dsa/lan937x.yaml#
+$id: http://devicetree.org/schemas/net/dsa/microchip,lan937x.yaml#
 $schema: http://devicetree.org/meta-schemas/core.yaml#
 
 title: LAN937x Ethernet Switch Series Tree Bindings
 
 maintainers:
+  - woojung.huh@microchip.com
   - prasanna.vengateshan@microchip.com
 
 properties:
