--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
@@ -1,4 +1,3 @@
-# Architecture
 BR2_arm=y
 BR2_cortex_a5=y
 BR2_ARM_ENABLE_VFP=y
@@ -13,49 +12,18 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(SRC_HOME)/kernels/masternet-next/arch/arm
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/atmel/sama5d3_xplained_ksz9897/busybox.config"
-BR2_PACKAGE_DOSFSTOOLS=y
-BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
-# BR2_PACKAGE_E2FSPROGS_BADBLOCKS is not set
-# BR2_PACKAGE_E2FSPROGS_CHATTR is not set
-# BR2_PACKAGE_E2FSPROGS_E2FREEFRAG is not set
-# BR2_PACKAGE_E2FSPROGS_FILEFRAG is not set
-# BR2_PACKAGE_E2FSPROGS_LOGSAVE is not set
-# BR2_PACKAGE_E2FSPROGS_LSATTR is not set
-# BR2_PACKAGE_E2FSPROGS_MKE2FS is not set
-# BR2_PACKAGE_E2FSPROGS_MKLOSTFOUND is not set
-# BR2_PACKAGE_E2FSPROGS_TUNE2FS is not set
-# BR2_PACKAGE_E2FSPROGS_UUIDGEN is not set
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPERF3=y
+BR2_PACKAGE_IPROUTE2=y
+BR2_PACKAGE_LINUXPTP=y
 BR2_PACKAGE_NUTTCP=y
 BR2_PACKAGE_TCPDUMP=y
-BR2_PACKAGE_IPROUTE2=y
-# BR2_PACKAGE_KSZ_LINUXPTP is not set
-# BR2_PACKAGE_KSZ_PTP_SCRIPTS is not set
-# BR2_PACKAGE_KSZ_REGS_BIN is not set
-# BR2_PACKAGE_KSZ_PTP_CLI is not set
-# BR2_PACKAGE_KSZ_PTP_TEST is not set
-# BR2_PACKAGE_KSZ_OPENAVB is not set
-# BR2_PACKAGE_MDIO_TOOL is not set
-# BR2_PACKAGE_WEB_GUI is not set
-# BR2_PACKAGE_PE_DIAG is not set
-# BR2_PACKAGE_KSZ_REGS_BIN is not set
-
-# Filesystem
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-#Added from atmel_sama5d3_xplained_mmc_dev_defconfig
 BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
-
-# Bootloaders
 BR2_TARGET_AT91BOOTSTRAP3=y
-#BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_GIT=y
-#BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_REPO_URL="https://github.com/linux4sam/at91bootstrap.git"
-#BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_REPO_VERSION="v3.8.5"
-#BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_PATCH_DIR="../patches/at91bootstrap3-v3.8.5"
-
 BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_TARBALL=y
 BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_TARBALL_LOCATION="$(call github,linux4sam,at91bootstrap,v3.9.0)/at91bootstrap3-v3.9.0.tar.gz"
 BR2_TARGET_AT91BOOTSTRAP3_DEFCONFIG="sama5d3_xplainedsd_uboot"
@@ -66,9 +34,6 @@ BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/linux4sam/u-boot-at91.git"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="linux4sam_5.3"
 BR2_TARGET_UBOOT_PATCH="../patches/uboot-linux4sam_5.3"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_ksz9897_mmc"
-BR2_TARGET_UBOOT_ENV=y
-# Host packages
-# Needed to generate the SD card image
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
