--- a/src/kernels/masternet-next/drivers/net/dsa/microchip/Kconfig
+++ b/src/kernels/masternet-next/drivers/net/dsa/microchip/Kconfig
@@ -13,6 +13,13 @@ config NET_DSA_MICROCHIP_LAN937X
 	  Select to enable support for registering switches configured
 	  through SPI.
 
+config NET_DSA_MICROCHIP_LAN937X_PTP
+	bool "support for the PTP clock on the LAN937x Ethernet Switch"
+	depends on NET_DSA_MICROCHIP_LAN937X_SPI
+	help
+		This enables support for timestamping & PTP clock manipulation in the 
+		LAN937x Ethernet switch
+
 menuconfig NET_DSA_MICROCHIP_KSZ9477
 	tristate "Microchip KSZ9477 series switch support"
 	depends on NET_DSA
