--- a/src/kernels/masternet-next/drivers/net/dsa/microchip/Kconfig
+++ b/src/kernels/masternet-next/drivers/net/dsa/microchip/Kconfig
@@ -16,6 +16,7 @@ config NET_DSA_MICROCHIP_LAN937X
 config NET_DSA_MICROCHIP_LAN937X_PTP
 	bool "Support for the PTP clock on the LAN937x Ethernet Switch"
 	depends on NET_DSA_MICROCHIP_LAN937X
+	depends on PTP_1588_CLOCK
 	help
 		This enables support for timestamping & PTP clock manipulation in the 
 		LAN937x Ethernet switch
