--- a/src/kernels/masternet-next/drivers/net/dsa/microchip/Makefile
+++ b/src/kernels/masternet-next/drivers/net/dsa/microchip/Makefile
@@ -7,7 +7,6 @@ obj-$(CONFIG_NET_DSA_MICROCHIP_KSZ8795)		+= ksz8795.o
 obj-$(CONFIG_NET_DSA_MICROCHIP_KSZ8795_SPI)	+= ksz8795_spi.o
 
 obj-$(CONFIG_NET_DSA_MICROCHIP_LAN937X)		+= lan937x.o
-lan937x-objs := lan937x_main.o
+lan937x-objs := lan937x_dev.o
+lan937x-objs += lan937x_main.o
 lan937x-objs += lan937x_spi.o
-
-
