--- a/src/kernels/masternet-next/Documentation/devicetree/bindings/net/dsa/microchip,lan937x.yaml
+++ b/src/kernels/masternet-next/Documentation/devicetree/bindings/net/dsa/microchip,lan937x.yaml
@@ -1,4 +1,4 @@
-# SPDX-License-Identifier: (GPL-2.0-only OR BSD-2-Clause)
+# SPDX-License-Identifier: GPL-2.0-only
 %YAML 1.2
 ---
 $id: http://devicetree.org/schemas/net/dsa/microchip,lan937x.yaml#
@@ -6,397 +6,332 @@ $schema: http://devicetree.org/meta-schemas/core.yaml#
 
 title: LAN937x Ethernet Switch Series Tree Bindings
 
+allOf:
+  - $ref: dsa.yaml#
+
 maintainers:
   - woojung.huh@microchip.com
   - prasanna.vengateshan@microchip.com
 
 properties:
   compatible:
-    oneOf:
-      - const: "microchip,lan9370"
-      - const: "microchip,lan9371"
-      - const: "microchip,lan9372"
-      - const: "microchip,lan9373"
-      - const: "microchip,lan9374"
+    enum:
+      - microchip,lan9370
+      - microchip,lan9371
+      - microchip,lan9372
+      - microchip,lan9373
+      - microchip,lan9374
+
+  ethernet-ports:
+    type: object
+    properties:
+      '#address-cells':
+        const: 1
+      '#size-cells':
+        const: 0
+
+  reg:
+    maxItems: 1
+
+  spi-cpol: true
+
+  spi-cpha: true
+
+  spi-max-frequency: true
 
   reset-gpios:
     description: should be a gpio specifier for a reset line
 
-  microchip,synclko-125:
-    description: Set if the output SYNCLKO frequency should be set to
-      125MHz instead of 25MHz.
-    type: boolean
-
 required:
   - compatible
+  - reg
 
-example:
-  Ethernet switch connected via SPI to the host, CPU port wired to eth1:
+additionalProperties: false
 
-	eth1: ethernet@f802c000 {
-		#address-cells = <1>;
-		#size-cells = <0>;
+examples:
+  - |
+    #include <dt-bindings/gpio/gpio.h>
+    
+    //Ethernet switch connected via spi to the host, CPU port wired to eth1
+    eth1 {
+      #address-cells = <1>;
+      #size-cells = <0>;
 
-		fixed-link {
-			speed = <100>;
-			full-duplex;
-		};
-	};
+      fixed-link {
+        speed = <100>;
+        full-duplex;
+      };
+    };
 
-	spi1: spi@f8008000 {
-		cs-gpios = <0>, <0>, <0>, <&pioC 28 0>;
-		id = <1>;
+    spi1 {
+      #address-cells = <1>;
+      #size-cells = <0>;
+      pinctrl-0 = <&pinctrl_spi_ksz>;
+      cs-gpios = <0>, <0>, <0>, <&pioC 28 0>;
+      id = <1>;
 
-		lan9370: lan9370@3 {
-			compatible = "microchip,lan9370";
-			reg = <3>;
+      lan9370: switch@0 {
+            compatible = "microchip,lan9370";
+            reg = <0>;
 
-			spi-max-frequency = <44000000>;
-			spi-cpha;
-			spi-cpol;
+            spi-max-frequency = <44000000>;
+            spi-cpha;
+            spi-cpol;
+        
+            ethernet-ports {
+              #address-cells = <1>;
+              #size-cells = <0>;
+              port@0 {
+                reg = <0>;
+                label = "lan1";
+              };
+              port@1 {
+                reg = <1>;
+                label = "lan2";
+              };
+              port@2 {
+                reg = <2>;
+                label = "lan3";
+              };
+              port@3 {
+                reg = <3>;
+                label = "lan4";
+              };
+              port@4 {
+                reg = <4>;
+                label = "cpu";
+                ethernet = <&eth1>;
+                phy-mode = "rmii";
+                fixed-link {
+                  speed = <100>;
+                  full-duplex;
+                };
+              };
+            };
+          };
 
-			ports {
-				#address-cells = <1>;
-				#size-cells = <0>;
-				port@0 {
-					reg = <0>;
-					label = "lan1";
-				};
-				port@1 {
-					reg = <1>;
-					label = "lan2";
-				};
-				port@2 {
-					reg = <2>;
-					label = "lan3";
-				};
-				port@3 {
-					reg = <3>;
-					label = "lan4";
-				};
-				port@4 {
-					reg = <4>;
-					label = "cpu";
-					ethernet = <&eth1>;
-					phy-mode = "rmii";
-					fixed-link {
-						speed = <100>;
-						full-duplex;
-					};
-				};
-			};
-		};
+          lan9371: switch@1 {
+            compatible = "microchip,lan9371";
+            reg = <1>;
 
-		lan9371: lan9371@3 {
-			compatible = "microchip,lan9371";
-			reg = <3>;
+            spi-max-frequency = <44000000>;
+            spi-cpha;
+            spi-cpol;
 
-			spi-max-frequency = <44000000>;
-			spi-cpha;
-			spi-cpol;
+            ethernet-ports {
+              #address-cells = <1>;
+              #size-cells = <0>;
+              port@0 {
+                reg = <0>;
+                label = "lan1";
+              };
+              port@1 {
+                reg = <1>;
+                label = "lan2";
+              };
+              port@2 {
+                reg = <2>;
+                label = "lan3";
+              };
+              port@3 {
+                reg = <3>;
+                label = "lan4";
+              };
+              port@4 {
+                reg = <4>;
+                label = "cpu";
+                ethernet = <&eth1>;
+                phy-mode = "rmii";
+                fixed-link {
+                  speed = <100>;
+                  full-duplex;
+                };
+              };
+              port@5 {
+                reg = <5>;
+                phy-mode = "rmii";
+                label = "lan5";
+                fixed-link {
+                  speed = <100>;
+                  full-duplex;
+                };
+              };
+            };
+          };
+          
+          lan9372: switch@2 {
+            compatible = "microchip,lan9372";
+            reg = <2>;
 
-			ports {
-				#address-cells = <1>;
-				#size-cells = <0>;
-				port@0 {
-					reg = <0>;
-					label = "lan1";
-				};
-				port@1 {
-					reg = <1>;
-					label = "lan2";
-				};
-				port@2 {
-					reg = <2>;
-					label = "lan3";
-				};
-				port@3 {
-					reg = <3>;
-					label = "lan4";
-				};
-				port@4 {
-					reg = <4>;
-					label = "cpu";
-					ethernet = <&eth1>;
-					phy-mode = "rmii";
-					fixed-link {
-						speed = <100>;
-						full-duplex;
-					};
-				};
-				port@5 {
-					reg = <5>;
-					label = "lan5";
-					phy-mode = "rmii";
-					fixed-link {
-						speed = <100>;
-						full-duplex;
-					};
-				};
-			};
-		};
-		lan9370: lan9370@3 {
-					compatible = "microchip,lan9370";
-					reg = <3>;
+            spi-max-frequency = <44000000>;
+            spi-cpha;
+            spi-cpol;
 
-					spi-max-frequency = <44000000>;
-					spi-cpha;
-					spi-cpol;
-			
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <2>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <3>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <4>;
-							label = "cpu";
-							ethernet = <&eth1>;
-							phy-mode = "rmii";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
+            ethernet-ports {
+              #address-cells = <1>;
+              #size-cells = <0>;
+              port@0 {
+                reg = <0>;
+                label = "lan1";
+              };
+              port@1 {
+                reg = <1>;
+                label = "lan2";
+              };
+              port@2 {
+                reg = <7>;
+                label = "lan3";
+              };
+              port@3 {
+                reg = <2>;
+                label = "lan4";
+              };
+              port@4 {
+                reg = <6>;
+                label = "lan5";
+              };
+              port@5 {
+                reg = <3>;
+                label = "lan6";
+              };
+              port@6 {
+                reg = <4>;
+                label = "cpu";              
+                ethernet = <&eth1>;
+                phy-mode = "rmii";
+                fixed-link {
+                  speed = <100>;
+                  full-duplex;
+                };
+              };
+              port@7 {
+                reg = <5>;
+                label = "lan7";
+                phy-mode = "rmii";
+                fixed-link {
+                  speed = <100>;
+                  full-duplex;
+                };
+              };
+            };
+          };
+          
+          lan9373: switch@3 {
+            compatible = "microchip,lan9373";
+            reg = <3>;
 
-				lan9371: lan9371@3 {
-					compatible = "microchip,lan9371";
-					reg = <3>;
+            spi-max-frequency = <44000000>;
+            spi-cpha;
+            spi-cpol;
 
-					spi-max-frequency = <44000000>;
-					spi-cpha;
-					spi-cpol;
+            ethernet-ports {
+              #address-cells = <1>;
+              #size-cells = <0>;
+              port@0 {
+                reg = <0>;
+                label = "lan1";
+              };
+              port@1 {
+                reg = <1>;
+                label = "lan2";
+              };
+              port@2 {
+                reg = <7>;
+                label = "lan3";
+              };
+              port@3 {
+                reg = <2>;
+                label = "lan4";
+              };
+              port@4 {
+                reg = <6>;
+                label = "lan5";
+              };
+              port@5 {
+                reg = <3>;
+                label = "lan6";
+                phy-mode = "sgmii";
+                fixed-link {
+                  speed = <100>;
+                  full-duplex;
+                };
+              };
+              port@6 {
+                reg = <4>;
+                label = "cpu";
+                ethernet = <&eth1>;
+                phy-mode = "rmii";
+                fixed-link {
+                  speed = <100>;
+                  full-duplex;
+                };
+              };
+              port@7 {
+                reg = <5>;
+                label = "lan7";
+                phy-mode = "rmii";
+                fixed-link {
+                  speed = <100>;
+                  full-duplex;
+                };
+              };
+            };
+          };
+          
+          lan9374: switch@4 {
+            compatible = "microchip,lan9374";
+            reg = <4>;
 
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <2>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <3>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <4>;
-							label = "cpu";
-							ethernet = <&eth1>;
-							phy-mode = "rmii";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-						port@5 {
-							reg = <5>;
-							phy-mode = "rmii";
-							label = "lan5";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
-				
-				lan9372: lan9372@3 {
-					compatible = "microchip,lan9372";
-					reg = <3>;
+            spi-max-frequency = <44000000>;
+            spi-cpha;
+            spi-cpol;
 
-					spi-max-frequency = <44000000>;
-					spi-cpha;
-					spi-cpol;
-
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <7>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <2>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <6>;
-							label = "lan5";
-						};
-						port@5 {
-							reg = <3>;
-							label = "lan6";
-						};
-						port@6 {
-							reg = <4>;
-							label = "cpu";							
-							ethernet = <&eth1>;
-							phy-mode = "rmii";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-						port@7 {
-							reg = <5>;
-							label = "lan7";
-							phy-mode = "rmii";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
-				
-				lan9373: lan9373@3 {
-					compatible = "microchip,lan9373";
-					reg = <3>;
-
-					spi-max-frequency = <44000000>;
-					spi-cpha;
-					spi-cpol;
-
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <7>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <2>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <6>;
-							label = "lan5";
-						};
-						port@5 {
-							reg = <3>;
-							label = "lan6";
-							phy-mode = "sgmii";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-						port@6 {
-							reg = <4>;
-							label = "cpu";
-							ethernet = <&eth1>;
-							phy-mode = "rmii";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-						port@7 {
-							reg = <5>;
-							label = "lan7";
-							phy-mode = "rmii";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
-				
-				lan9374: lan9374@3 {
-					compatible = "microchip,lan9374";
-					reg = <3>;
-
-					spi-max-frequency = <44000000>;
-					spi-cpha;
-					spi-cpol;
-
-					ports {
-						#address-cells = <1>;
-						#size-cells = <0>;
-						port@0 {
-							reg = <0>;
-							label = "lan1";
-						};
-						port@1 {
-							reg = <1>;
-							label = "lan2";
-						};
-						port@2 {
-							reg = <7>;
-							label = "lan3";
-						};
-						port@3 {
-							reg = <2>;
-							label = "lan4";
-						};
-						port@4 {
-							reg = <6>;
-							label = "lan5";
-						};
-						port@5 {
-							reg = <3>;
-							label = "lan6";
-						};
-						port@6 {
-							reg = <4>;
-							label = "cpu";
-							ethernet = <&eth1>;
-							phy-mode = "rmii";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-						port@7 {
-							reg = <5>;
-							phy-mode = "rmii";
-							label = "lan7";
-							fixed-link {
-								speed = <100>;
-								full-duplex;
-							};
-						};
-					};
-				};
-	};
+            ethernet-ports {
+              #address-cells = <1>;
+              #size-cells = <0>;
+              port@0 {
+                reg = <0>;
+                label = "lan1";
+              };
+              port@1 {
+                reg = <1>;
+                label = "lan2";
+              };
+              port@2 {
+                reg = <7>;
+                label = "lan3";
+              };
+              port@3 {
+                reg = <2>;
+                label = "lan4";
+              };
+              port@4 {
+                reg = <6>;
+                label = "lan5";
+              };
+              port@5 {
+                reg = <3>;
+                label = "lan6";
+              };
+              port@6 {
+                reg = <4>;
+                label = "cpu";
+                ethernet = <&eth1>;
+                phy-mode = "rmii";
+                fixed-link {
+                  speed = <100>;
+                  full-duplex;
+                };
+              };
+              port@7 {
+                reg = <5>;
+                phy-mode = "rmii";
+                label = "lan7";
+                fixed-link {
+                  speed = <100>;
+                  full-duplex;
+                };
+              };
+            };
+          };
+        };
