--- a/src/kernels/masternet-next/Documentation/devicetree/bindings/net/dsa/microchip,lan937x.yaml
+++ b/src/kernels/masternet-next/Documentation/devicetree/bindings/net/dsa/microchip,lan937x.yaml
@@ -6,12 +6,12 @@ $schema: http://devicetree.org/meta-schemas/core.yaml#
 
 title: LAN937x Ethernet Switch Series Tree Bindings
 
-allOf:
-  - $ref: dsa.yaml#
-
 maintainers:
   - woojung.huh@microchip.com
   - prasanna.vengateshan@microchip.com
+
+allOf:
+  - $ref: dsa.yaml#
 
 properties:
   compatible:
@@ -33,10 +33,6 @@ properties:
   reg:
     maxItems: 1
 
-  spi-cpol: true
-
-  spi-cpha: true
-
   spi-max-frequency: true
 
   reset-gpios:
@@ -46,7 +42,7 @@ required:
   - compatible
   - reg
 
-additionalProperties: false
+unevaluatedProperties: false
 
 examples:
   - |
@@ -75,8 +71,6 @@ examples:
             reg = <0>;
 
             spi-max-frequency = <44000000>;
-            spi-cpha;
-            spi-cpol;
         
             ethernet-ports {
               #address-cells = <1>;
@@ -115,8 +109,6 @@ examples:
             reg = <1>;
 
             spi-max-frequency = <44000000>;
-            spi-cpha;
-            spi-cpol;
 
             ethernet-ports {
               #address-cells = <1>;
@@ -164,8 +156,6 @@ examples:
             reg = <2>;
 
             spi-max-frequency = <44000000>;
-            spi-cpha;
-            spi-cpol;
 
             ethernet-ports {
               #address-cells = <1>;
@@ -221,8 +211,6 @@ examples:
             reg = <3>;
 
             spi-max-frequency = <44000000>;
-            spi-cpha;
-            spi-cpol;
 
             ethernet-ports {
               #address-cells = <1>;
@@ -283,8 +271,6 @@ examples:
             reg = <4>;
 
             spi-max-frequency = <44000000>;
-            spi-cpha;
-            spi-cpol;
 
             ethernet-ports {
               #address-cells = <1>;
