--- a/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
+++ b/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
@@ -53,6 +53,7 @@ CONFIG_IPV6_SIT_6RD=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_NET_DSA=y
+# CONFIG_NET_DSA_TAG_HELLCREEK is not set
 CONFIG_VLAN_8021Q=y
 CONFIG_CAN=y
 CONFIG_CAN_AT91=y
