added the configs for test packages\

--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/Config.in
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/Config.in
@@ -1908,6 +1908,8 @@ menu "Mail"
 endmenu
 
 menu "Miscellaneous"
+	source "package/hello/Config.in"
+	source "package/cbs/Config.in"
 	source "package/aespipe/Config.in"
 	source "package/bc/Config.in"
 	source "package/bitcoin/Config.in"
@@ -2045,6 +2047,7 @@ menu "Networking applications"
 	source "package/linphone/Config.in"
 	source "package/linux-zigbee/Config.in"
 	source "package/linuxptp/Config.in"
+	source "package/ptputil/Config.in"
 	source "package/lldpd/Config.in"
 	source "package/lrzsz/Config.in"
 	source "package/lynx/Config.in"
