added the cbs & mqprio in the linux kernel

--- a/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
+++ b/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
@@ -44,6 +44,9 @@ CONFIG_BRIDGE=y
 CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_NET_DSA=y
 CONFIG_VLAN_8021Q=y
+CONFIG_NET_SCHED=y
+CONFIG_NET_SCH_CBS=y
+CONFIG_NET_SCH_MQPRIO=y
 CONFIG_CAN=y
 CONFIG_CAN_AT91=y
 CONFIG_CAN_M_CAN=y
