JIRA TL-32 Fix, DTS: rgmii-tx to rgmii-txid, init script fix, post build script fix

--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
@@ -199,7 +199,7 @@
 						};
 						port@4 {
 							reg = <4>;
-							phy-mode = "rgmii-tx";
+							phy-mode = "rgmii-txid";
 							label = "cpu";
 							ethernet = <&macb0>;
 							fixed-link {
@@ -209,7 +209,7 @@
 						};
 						port@5 {
 							reg = <5>;
-							phy-mode = "rgmii-tx";
+							phy-mode = "rgmii-txid";
 							label = "lan7";
 							fixed-link {
 								speed = <1000>;
