SD image working with uboot variables, internal feedback set1 addressed

--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/board/atmel/sama5d3_xplained_ksz9897/genimage.cfg
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/board/atmel/sama5d3_xplained_ksz9897/genimage.cfg
@@ -5,9 +5,12 @@ image boot.vfat {
 		files = {
 			"zImage",
 			"at91-sama5d3_xplained.dtb",
-			"uboot.env",
 			"boot.bin",
 			"u-boot.bin"
+		}
+
+		file uboot.env {
+			image = "uboot-env.bin"
 		}
 	}
 	size = 510M
