--- a/src/kernels/masternet-next/Documentation/devicetree/bindings/net/dsa/microchip,lan937x.yaml
+++ b/src/kernels/masternet-next/Documentation/devicetree/bindings/net/dsa/microchip,lan937x.yaml
@@ -7,8 +7,7 @@ $schema: http://devicetree.org/meta-schemas/core.yaml#
 title: LAN937x Ethernet Switch Series Tree Bindings
 
 maintainers:
-  - woojung.huh@microchip.com
-  - prasanna.vengateshan@microchip.com
+  - UNGLinuxDriver@microchip.com
 
 allOf:
   - $ref: dsa.yaml#
