lan9374 EVB is working after DTS changes w.r.to reset pin, facilitating custom scripts, all DTS file sync

--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/Config.in
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/Config.in
@@ -1933,6 +1933,7 @@ menu "Miscellaneous"
 	source "package/taskd/Config.in"
 	source "package/wine/Config.in"
 	source "package/xutil_util-macros/Config.in"
+	source "package/custom-scripts/Config.in"
 endmenu
 
 menu "Networking applications"
