Bringup version of Flower and TCAM

--- a/src/kernels/masternet-next/drivers/net/dsa/microchip/Makefile
+++ b/src/kernels/masternet-next/drivers/net/dsa/microchip/Makefile
@@ -12,4 +12,6 @@ lan937x-objs := lan937x_dev.o
 lan937x-objs += lan937x_main.o
 lan937x-objs += lan937x_spi.o
 lan937x-objs += lan937x_tc.o
+lan937x-objs += lan937x_flower.o
+lan937x-objs += lan937x_acl.o
 obj-$(CONFIG_NET_DSA_MICROCHIP_LAN937X_PTP)     += lan937x_ptp.o
