--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
@@ -181,21 +181,25 @@
 						port@0 {
 							reg = <0>;
 							phy-handle=<&t1phy0>;
+							phy-mode = "internal";
 							label = "lan1";
 						};
 						port@1 {
 							reg = <1>;
 							phy-handle=<&t1phy1>;
+							phy-mode = "internal";
 							label = "lan2";
 						};
 						port@2 {
 							reg = <2>;
 							phy-handle=<&t1phy2>;
+							phy-mode = "internal";
 							label = "lan4";
 						};
 						port@3 {
 							reg = <3>;
 							phy-handle=<&t1phy3>;
+							phy-mode = "internal";
 							label = "lan6";
 						};
 						port@5 {
@@ -219,11 +223,13 @@
 						port@6 {
 							reg = <6>;
 							phy-handle=<&t1phy4>;
+							phy-mode = "internal";
 							label = "lan5";
 						};
 						port@7 {
 							reg = <7>;
 							phy-handle=<&t1phy5>;
+							phy-mode = "internal";
 							label = "lan3";
 						};
 					};
