--- a/src/kernels/masternet-next/Documentation/devicetree/bindings/net/dsa/microchip,lan937x.yaml
+++ b/src/kernels/masternet-next/Documentation/devicetree/bindings/net/dsa/microchip,lan937x.yaml
@@ -68,21 +68,25 @@ examples:
           port@0 {
             reg = <0>;
             label = "lan1";
+            phy-mode = "internal";
             phy-handle = <&t1phy0>;
           };
           port@1 {
             reg = <1>;
             label = "lan2";
+            phy-mode = "internal";
             phy-handle = <&t1phy1>;
           };
           port@2 {
             reg = <2>;
             label = "lan4";
+            phy-mode = "internal";
             phy-handle = <&t1phy2>;
           };
           port@3 {
             reg = <3>;
             label = "lan6";
+            phy-mode = "internal";
             phy-handle = <&t1phy3>;
           };
           port@4 {
@@ -97,6 +101,7 @@ examples:
           port@5 {
             reg = <5>;
             label = "lan7";
+            phy-mode = "rgmii";
             fixed-link {
               speed = <1000>;
               full-duplex;
@@ -105,11 +110,13 @@ examples:
           port@6 {
             reg = <6>;
             label = "lan5";
+            phy-mode = "internal";
             phy-handle = <&t1phy4>;
           };
           port@7 {
             reg = <7>;
             label = "lan3";
+            phy-mode = "internal";
             phy-handle = <&t1phy5>;
           };
         };
