Updated DTS file for lan9374

--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
@@ -172,7 +172,7 @@
 					spi-cpol;
 					interrupt-parent = <&pioB>;
 					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;					
-					status = "okay";
+					status = "disabled";
 					pps_led_index = <1>;
 					ports {
 						#address-cells = <1>;
