added missed files

--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/cbs/src/Makefile
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/cbs/src/Makefile
@@ -5,6 +5,7 @@ CC = gcc
 all:
 	$(CC) -o tsn_talker tsn_talker.c
 	$(CC) -o tsn_listener tsn_listener.c
+	$(CC) -o pkt_io pkt_io.c -lpthread
 	$(CC) -o dsa_ver dsa_ver.c
 
 clean:
