--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan9374_evb_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan9374_evb_defconfig
@@ -12,22 +12,21 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(SRC_HOME)/kernels/masternet-next/arch/arm
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/atmel/sama5d3_xplained_ksz9897/busybox.config"
-BR2_PACKAGE_DOSFSTOOLS=y
-BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_LIBGPIOD=y
+BR2_PACKAGE_LIBGPIOD_TOOLS=y
+BR2_PACKAGE_CBS=y
+BR2_PACKAGE_ARP_SCAN=y
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_LINUXPTP=y
 BR2_PACKAGE_NUTTCP=y
-BR2_PACKAGE_TCPDUMP=y
-BR2_PACKAGE_ARP_SCAN=y
-BR2_PACKAGE_PHYTOOL=y
 BR2_PACKAGE_SPI_TOOLs=y
-BR2_PACKAGE_LIBGPIOD=y
-BR2_PACKAGE_LIBGPIOD_TOOLS=y
+BR2_PACKAGE_PHYTOOL=y
+BR2_PACKAGE_TCPDUMP=y
 BR2_TARGET_ROOTFS_UBI=y
 BR2_TARGET_ROOTFS_UBI_SUBSIZE=2048
 BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x1f000
@@ -46,4 +45,3 @@ BR2_TARGET_UBOOT_PATCH="../patches/uboot-linux4sam_5.3"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_ksz9897"
 BR2_TARGET_UBOOT_ENV=y
 BR2_PACKAGE_HOST_SAM_BA=y
-BR2_PACKAGE_CUSTOM_SCRIPTS=y
