--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/uclibc/uClibc-ng.config
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/uclibc/uClibc-ng.config
@@ -20,6 +20,8 @@ UCLIBC_HAS_SHA512_CRYPT_IMPL=y
 UCLIBC_USE_NETLINK=y
 UCLIBC_SUPPORT_AI_ADDRCONFIG=y
 UCLIBC_HAS_RESOLVER_SUPPORT=y
+UCLIBC_HAS_ARGP=y
+UCLIBC_HAS_THREADS_NATIVE=y
 UCLIBC_HAS_LIBRESOLV_STUB=y
 UCLIBC_HAS_LIBNSL_STUB=y
 UCLIBC_HAS_CTYPE_CHECKED=y
