[TL-60] updated the jumbo frame in macb_main and dts for using gem

--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts
@@ -485,6 +485,7 @@
 			};
 
 			macb1: ethernet@f802c000 {
+				compatible = "atmel,sama5d3-gem";
 				phy-mode = "rmii";
 				#address-cells = <1>;
 				#size-cells = <0>;
