Resolved the kernel build error when built as module
added the teardown function

--- a/src/kernels/masternet-next/drivers/net/dsa/microchip/Makefile
+++ b/src/kernels/masternet-next/drivers/net/dsa/microchip/Makefile
@@ -13,5 +13,7 @@ lan937x-objs += lan937x_main.o
 lan937x-objs += lan937x_spi.o
 lan937x-objs += lan937x_tc.o
 lan937x-objs += lan937x_devlink.o
-obj-$(CONFIG_NET_DSA_MICROCHIP_LAN937X_PTP)     += lan937x_ptp.o
+ifdef CONFIG_NET_DSA_MICROCHIP_LAN937X_PTP
+lan937x-objs += lan937x_ptp.o
+endif
 
