moved tas to separate file due to built error when ptp is disabled
Time-aware schedular is depends on the ptp. So when the ptp is disabled,
the ptp is disabled, the time aware schedular also has to be disabled.

--- a/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
+++ b/src/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig
@@ -86,6 +86,7 @@ CONFIG_BLK_DEV_SD=y
 CONFIG_NETDEVICES=y
 CONFIG_NET_DSA_MICROCHIP_LAN937X=y
 CONFIG_NET_DSA_MICROCHIP_LAN937X_PTP=y
+CONFIG_NET_DSA_MICROCHIP_LAN937X_TAS=y
 # CONFIG_NET_VENDOR_BROADCOM is not set
 CONFIG_MACB=y
 # CONFIG_NET_VENDOR_CIRRUS is not set
