--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/Config.in
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/Config.in
@@ -1908,8 +1908,6 @@ menu "Mail"
 endmenu
 
 menu "Miscellaneous"
-	source "package/cbs/Config.in"
-	source "package/ptputil/Config.in"
 	source "package/aespipe/Config.in"
 	source "package/bc/Config.in"
 	source "package/bitcoin/Config.in"
@@ -2373,6 +2371,10 @@ menu "Text editors and viewers"
 	source "package/nano/Config.in"
 	source "package/uemacs/Config.in"
 	source "package/vim/Config.in"
+endmenu
+
+menu "Microchip UNG applications"
+	source "package/microchip/Config.in"
 endmenu
 
 endmenu
