Updated RGMII internal delay implementation

--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
@@ -203,6 +203,8 @@
 						port@5 {
 							reg = <5>;
 							phy-mode = "rgmii-id";
+							rx-internal-delay-ps = <2000>;
+							tx-internal-delay-ps = <2000>;
 							ethernet = <&macb0>;
 							fixed-link {
 								speed = <1000>;
@@ -212,6 +214,8 @@
 						port@4 {
 							reg = <4>;
 							phy-mode = "rgmii-id";
+							rx-internal-delay-ps = <2000>;
+							tx-internal-delay-ps = <2000>;
 							label = "lan7";
 							fixed-link {
 								speed = <1000>;
