updated the other stuff - synced from gPTPdevel
Package folder, boot folder, rootfs overlay
../patches folder
../dts folder

--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/Config.in
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/package/Config.in
@@ -2373,4 +2373,8 @@ menu "Text editors and viewers"
 	source "package/vim/Config.in"
 endmenu
 
+menu "Microchip UNG applications"
+	source "package/microchip/Config.in"
+endmenu
+
 endmenu
