--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
@@ -72,7 +72,7 @@
 				pmic: act8865@5b {
 					compatible = "active-semi,act8865";
 					reg = <0x5b>;
-					status = "okay";
+					status = "disabled";
 
 					regulators {
 						vcc_1v8_reg: DCDC_REG1 {
@@ -171,7 +171,8 @@
 					interrupt-parent = <&pioB>;
 					interrupts = <28 IRQ_TYPE_LEVEL_LOW>;
 					resetb-gpios = <&pioD 18 GPIO_ACTIVE_LOW>;
-					pinctrl-0 = <&pinctrl_spi_ksz_rst>;					
+					pinctrl-0 = <&pinctrl_spi_ksz_rst>;
+					led-t1-sel = <07754321077>;    // this value is octal.  hex is <0x3fb1a23f>
 					status = "okay";
 					ports {
 						#address-cells = <1>;
